# renovate-rust-git-dependencies

./: Cargo.toml  renovate.json5
