[package]
name = "foo"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = { git = "https://github.com/rust-lang/regex", rev = "9870c06e6c772daaad7ab612faab29130753e41c" }
ruff_python_parser = { git = "https://github.com/astral-sh/ruff", tag = "0.6.1" }
salsa = { git = "https://github.com/salsa-rs/salsa", rev = "f608ff8" }
serde = "1.0.213"
serde_json = "=1.0.126"
